deploy/k8s/local/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: skytree-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana-oss:11.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 472
            runAsNonRoot: true
            runAsUser: 472
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
            - name: dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
              readOnly: true
            - name: dashboard
              mountPath: /var/lib/grafana/dashboards
              readOnly: true
      volumes:
        - name: data
          emptyDir: {}
        - name: datasources
          configMap:
            name: skytree-grafana-datasources
        - name: dashboard-provider
          configMap:
            name: skytree-grafana-dashboard-provider
        - name: dashboard
          configMap:
            name: skytree-grafana-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: skytree-local
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
