deploy/k8s/local/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: skytree-headless
  namespace: skytree-local
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: skytree
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: raft
      port: 8080
      targetPort: raft
    - name: http
      port: 9526
      targetPort: http
    - name: grpc
      port: 8091
      targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: skytree-api
  namespace: skytree-local
spec:
  selector:
    app: skytree
  ports:
    - name: http
      port: 9526
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: skytree-mqtt
  namespace: skytree-local
spec:
  selector:
    app: skytree
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
